adicionando produtos do carrinho

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,5 @@
   font-family: 'Instrument Sans', sans-serif;
   font-family: 'Inter', sans-serif;
   font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
 }
